--- a/main/chap3_gaussian_processes.tex
+++ b/main/chap3_gaussian_processes.tex
@@ -6,12 +6,18 @@
 
 Buildings are responsible for a large share of the global CO$_2$ emissions, more concretely, for around 37\% of them when taking into account the estimated emissions associated with producing their materials \citep[§3.2]{united2022}. Having in place energy-efficient heating and cooling systems is often highlighted as a key requirement for significantly lowering their environmental impact and marching towards a greener future \citep{iea2022}. This in turn could either be achieved by structurally changing the built environment, for instance, improving thermal isolation between indoor spaces and the outdoor space, or by making a more intelligent use of the energy at hand, guaranteeing the occupants' comfort while minimizing metrics such as thermal wasting. Control engineers are specialists in carrying out the latter task.
 
-The hope is that well tuned, specialized control algorithms could deliver better performance when compared to the simplistic strategies commonly deployed in the field, or even compared to manual regulation when occupants are given considerable actuation power \citep{stluka2018architectures}.
+Besides its clear economical and political pertinence, the topic of raising the efficiency of buildings has also had a significant academic relevance, particularly for the automatic control community. One idea that is often explored is that well tuned, specialized control algorithms can deliver better performance compared to simplistic strategies commonly deployed in the field \citep{stluka2018architectures}. These specialized algorithms often rely on solving optimization problems on-line, and can exploit forecasts of important quantities such as the weather and the building occupancy schedule \citep{oldewurtel2012use}. Arguably the most common framework used by researchers to tackle building climate control is model predictive control thanks to its flexibility and interpretability. The reader is referred to \cite{drgovna2020all} for quite a comprehensive survey on the matter. In \cite{sturzenegger2015model} for instance, the authors report in detail the results of using MPC to operate an occupied 6-story Swiss office building over multiple months. Moreover, the study concluded that the energy savings were not sufficient to justify the engineering effort required to deploy MPC in everyday building projects. In fact, the modeling stage is frequently pointed out by many studies as being the most burdensome one, preventing the wider adoption of this technique in the field \citep{drgovna2020all,bunning2020experimental}.
+
+Eliciting knowledge from domain experts or using architectural data to develop linear thermal models for buildings was proven to be an effective approach in many distinct scenarios (see e.g. the experimental works \cite{vavna2014model,bunning2022physics}). As an alternative, it is also possible to employ black-box linear structures, which requires less access to building-specific information \citep{fabietti2016experimental,fabietti2018multi}. A more recent trend is that of experimenting with contemporary machine learning models and methods, whose promise is to further ease the modeling step while being flexible enough to capture intricate non-linear relationships present in the data and deliver superior performance. Some variants of reinforcement learning (RL) for instance are model-free and can optimize their actions over time by only interacting with the environment \citep{du2021intelligent}. Nevertheless, since RL typically converges slowly and long-lasting experiments with low performance on occupied real buildings are not desirable, model-free RL designers make use of simulation environments to warm-start their RL agents, thus not escaping the need of high-fidelity models \citep{di2022lessons}. Going from historical data directly to on-line decision making is possible through data-enabled predictive control (DeePC)  \citep{coulson2019data}, which bypasses the modeling step completely and directly incorporates sensor information into a special MPC formulation. This paradigm was used in \cite{lian2021adaptive} to regulate the indoor temperature of a university lecture hall over several weeks. DeePC was however developed to handle linear relationships and more flexible tools are necessary to model more complex dynamics, e.g. the formalism of Gaussian processes (GPs).
+
+Gaussian processes are a well-established, principled way of crafting possibly non-linear statistical models. In contrast with the techniques listed in the previous paragraph, GPs yield not only nominal predictions, but also a measure of confidence around them that can be taken into account during decision making. Practical applications of this tool can be easily found in the area of robotics, computer simulation, global optimization, among others. In the building community, they have been used to calibrate digital twins \citep{chakrabarty2021scalable}, forecast temperature evolution \citep{gray2016thermal}, detect faults in air-handling units \citep{van2017advanced}, and create abstract models for how consumers react to demand-adjustment signals \citep{nghiem2017data}. All of the previously cited works consisted of off-line analyses on real data or purely of simulations and, to the best of our knowledge, the use of Gaussian processes to carry out closed-loop control of a building has not yet been reported in the literature. The experimental investigation presented in this chapter aims at filling that gap.
+
+We start by reviewing the basic theory that is necessary to understand how GPs were applied in this particular project. Next, the building under study, a hospital surgery center, is presented along with its industrial cooling system and the sensor networks deployed on-site. Data collection and model training are covered, followed by our MPC formulation where the GP dynamical models were incorporated. Finally, the obtained experimental results are discussed, and the chosen approach is compared with a number of alternative techniques in two criteria, average thermal comfort and incurred electrical energy consumption.
 
 \section{A brief overview of Gaussian process}
 \label{sec.gps}
 
-Gaussian processes (GPs) lie in the class of non-parametric Bayesian models. Whereas one can easily and intuitively explain GPs in a regression setting by making use of a few normal distribution properties, they also constitute a large and still active research field on their own.
+Gaussian processes lie in the class of non-parametric Bayesian models. Whereas one can easily and intuitively explain GPs in a regression setting by making use of a few normal distribution properties, they also constitute a large and still active research field on their own.
 %On one hand, they can be easily explained in a regression setting under Gaussian noise as some elementary normal distribution properties suffice to derive in closed-form their main expressions. On the other had, surprisingly, they also constitute a research area on their own as they can be viewed, explored and modified in countless ways. 
 One classical GP reference is the acclaimed book \cite{williams2006gaussian}, which covers most of the basic concepts. Complementary views on the subject are offered by the texts \cite{gramacy2020surrogates} and \cite{kanagawa2018gaussian}.
 %The review article \cite{kanagawa2018gaussian} builds a solid bridge between the statistical and the deterministic approaches to kernel learning. 
