--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -14,6 +14,89 @@
 	publisher={Elsevier}
 }
 
+@article{fabietti2018multi,
+	title={Multi-time scale coordination of complementary resources for the provision of ancillary services},
+	author={Fabietti, Luca and Qureshi, Faran A and Gorecki, Tomasz T and Salzmann, Christophe and Jones, Colin N},
+	journal={Applied energy},
+	volume={229},
+	pages={1164--1180},
+	year={2018},
+	publisher={Elsevier}
+}
+
+@article{du2021intelligent,
+	title={Intelligent multi-zone residential HVAC control strategy based on deep reinforcement learning},
+	author={Du, Yan and Zandi, Helia and Kotevska, Olivera and Kurte, Kuldeep and Munk, Jeffery and Amasyali, Kadir and Mckee, Evan and Li, Fangxing},
+	journal={Applied Energy},
+	volume={281},
+	pages={116117},
+	year={2021},
+	publisher={Elsevier}
+}
+
+@article{di2022lessons,
+	title={Lessons Learned from Data-Driven Building Control Experiments: Contrasting Gaussian Process-based MPC, Bilevel DeePC, and Deep Reinforcement Learning},
+	author={Di Natale, Loris and Lian, Yingzhao and Maddalena, Emilio T and Shi, Jicheng and Jones, Colin N},
+	journal={arXiv preprint arXiv:2205.15703},
+	year={2022}
+}
+
+@article{lian2021adaptive,
+	title={Adaptive robust data-driven building control via bi-level reformulation: an experimental result},
+	author={Lian, Yingzhao and Shi, Jicheng and Koch, Manuel and Jones, Colin Neil},
+	journal={arXiv preprint arXiv:2106.05740},
+	year={2021}
+}
+
+@inproceedings{coulson2019data,
+	title={Data-enabled predictive control: In the shallows of the DeePC},
+	author={Coulson, Jeremy and Lygeros, John and D{\"o}rfler, Florian},
+	booktitle={2019 18th European Control Conference (ECC)},
+	pages={307--312},
+	year={2019},
+	organization={IEEE}
+}
+
+@article{chakrabarty2021scalable,
+	title={Scalable Bayesian optimization for model calibration: Case study on coupled building and HVAC dynamics},
+	author={Chakrabarty, Ankush and Maddalena, Emilio and Qiao, Hongtao and Laughman, Christopher},
+	journal={Energy and Buildings},
+	volume={253},
+	pages={111460},
+	year={2021},
+	publisher={Elsevier}
+}
+
+@article{gray2016thermal,
+	title={Thermal building modelling using Gaussian processes},
+	author={Gray, Francesco Massa and Schmidt, Michael},
+	journal={Energy and Buildings},
+	volume={119},
+	pages={119--128},
+	year={2016},
+	publisher={Elsevier}
+}
+
+@article{van2017advanced,
+	title={Advanced detection of HVAC faults using unsupervised SVM novelty detection and Gaussian process models},
+	author={Van Every, Philip Michael and Rodriguez, Mykel and Jones, C Birk and Mammoli, Andrea Alberto and Mart{\'\i}nez-Ram{\'o}n, Manel},
+	journal={Energy and Buildings},
+	volume={149},
+	pages={216--224},
+	year={2017},
+	publisher={Elsevier}
+}
+
+@inproceedings{nghiem2017data,
+	title={Data-driven demand response modeling and control of buildings with gaussian processes},
+	author={Nghiem, Truong X and Jones, Colin N},
+	booktitle={2017 American Control Conference (ACC)},
+	pages={2919--2924},
+	year={2017},
+	organization={IEEE}
+}
+
+
 @inproceedings{maddalena2021kpc,
 	title={KPC: Learning-based model predictive control with deterministic guarantees},
 	author={Maddalena, Emilio T and Scharnhorst, Paul and Jiang, Yuning and Jones, Colin N},
@@ -223,15 +306,6 @@
 	year={2022}
 }
 
-@book{williams2006gaussian,
-	title={Gaussian processes for machine learning},
-	author={Williams, Christopher KI and Rasmussen, Carl Edward},
-	volume={2},
-	number={3},
-	year={2006},
-	publisher={MIT press Cambridge, MA}
-}
-
 @article{fasshauer2011positive,
 	title={Positive definite kernels: past, present and future},
 	author={Fasshauer, Gregory E},
@@ -303,24 +377,6 @@
 	year={2020}
 }
 
-@article{bauer2016understanding,
-	title={Understanding probabilistic sparse Gaussian process approximations},
-	author={Bauer, Matthias and van der Wilk, Mark and Rasmussen, Carl Edward},
-	journal={Advances in neural information processing systems},
-	volume={29},
-	year={2016}
-}
-
-
-@inproceedings{lederer2021gaussian,
-	title={Gaussian process-based real-time learning for safety critical applications},
-	author={Lederer, Armin and Conejo, Alejandro J Ord{\'o}{\~n}ez and Maier, Korbinian A and Xiao, Wenxin and Umlauft, Jonas and Hirche, Sandra},
-	booktitle={International Conference on Machine Learning},
-	pages={6055--6064},
-	year={2021},
-	organization={PMLR}
-}
-
 @misc{united2022,
 	title={2022 Global Status Report for Buildings and Construction: Towards
 	a Zero‑emission, Efficient and Resilient Buildings and Construction Sector},
@@ -336,6 +392,27 @@
 	publisher={IEA Publication}
 }
 
+@article{drgovna2020all,
+	title={All you need to know about model predictive control for buildings},
+	author={Drgo{\v{n}}a, J{\'a}n and Arroyo, Javier and Figueroa, Iago Cupeiro and Blum, David and Arendt, Krzysztof and Kim, Donghun and Oll{\'e}, Enric Perarnau and Oravec, Juraj and Wetter, Michael and Vrabie, Draguna L and others},
+	journal={Annual Reviews in Control},
+	volume={50},
+	pages={190--232},
+	year={2020},
+	publisher={Elsevier}
+}
+
+@article{sturzenegger2015model,
+	title={Model predictive climate control of a swiss office building: Implementation, results, and cost--benefit analysis},
+	author={Sturzenegger, David and Gyalistras, Dimitrios and Morari, Manfred and Smith, Roy S},
+	journal={IEEE Transactions on Control Systems Technology},
+	volume={24},
+	number={1},
+	pages={1--12},
+	year={2015},
+	publisher={IEEE}
+}
+
 @incollection{stluka2018architectures,
 	title={Architectures and algorithms for building automation—An industry view},
 	author={Stluka, Petr and Parthasarathy, Girija and Gabel, Steve and Samad, Tariq},
@@ -343,6 +420,49 @@
 	pages={11--43},
 	year={2018},
 	publisher={Springer}
+}
+
+@article{fabietti2016experimental,
+	title={Experimental implementation of frequency regulation services using commercial buildings},
+	author={Fabietti, Luca and Gorecki, Tomasz T and Qureshi, Faran A and Bitlislio{\u{g}}lu, Altu{\u{g}} and Lymperopoulos, Ioannis and Jones, Colin N},
+	journal={IEEE Transactions on Smart Grid},
+	volume={9},
+	number={3},
+	pages={1657--1666},
+	year={2016},
+	publisher={IEEE}
+}
+
+@article{vavna2014model,
+	title={Model-based energy efficient control applied to an office building},
+	author={V{\'a}{\v{n}}a, Zden{\v{e}}k and Cigler, Ji{\v{r}}{\'\i} and {\v{S}}irok{\`y}, Jan and {\v{Z}}{\'a}{\v{c}}ekov{\'a}, Eva and Ferkl, Luk{\'a}{\v{s}}},
+	journal={Journal of Process Control},
+	volume={24},
+	number={6},
+	pages={790--797},
+	year={2014},
+	publisher={Elsevier}
+}
+
+@article{bunning2022physics,
+	title={Physics-informed linear regression is competitive with two Machine Learning methods in residential building MPC},
+	author={B{\"u}nning, Felix and Huber, Benjamin and Schalbetter, Adrian and Aboudonia, Ahmed and de Badyn, Mathias Hudoba and Heer, Philipp and Smith, Roy S and Lygeros, John},
+	journal={Applied Energy},
+	volume={310},
+	pages={118491},
+	year={2022},
+	publisher={Elsevier}
+}
+
+
+@article{oldewurtel2012use,
+	title={Use of model predictive control and weather forecasts for energy efficient building climate control},
+	author={Oldewurtel, Frauke and Parisio, Alessandra and Jones, Colin N and Gyalistras, Dimitrios and Gwerder, Markus and Stauch, Vanessa and Lehmann, Beat and Morari, Manfred},
+	journal={Energy and Buildings},
+	volume={45},
+	pages={15--27},
+	year={2012},
+	publisher={Elsevier}
 }
 
 
@@ -391,8 +511,6 @@
 @book{williams2006gaussian,
 	title={{Gaussian Processes For Machine Learning}},
 	author={Williams, Christopher KI and Rasmussen, Carl Edward},
-	volume={2},
-	number={3},
 	year={2006},
 	publisher={MIT press Cambridge, MA}
 }
@@ -644,16 +762,6 @@
 	pages={808--821},
 	year={2018},
 	publisher={Taylor \& Francis}
-}
-
-@article{matthews2017gpflow,
-	title={GPflow: A Gaussian Process Library using TensorFlow.},
-	author={Matthews, Alexander G de G and Van Der Wilk, Mark and Nickson, Tom and Fujii, Keisuke and Boukouvalas, Alexis and Le{\'o}n-Villagr{\'a}, Pablo and Ghahramani, Zoubin and Hensman, James},
-	journal={J. Mach. Learn. Res.},
-	volume={18},
-	number={40},
-	pages={1--6},
-	year={2017}
 }
 
 @inproceedings{turner2010state,
