--- a/head/abstracts.tex
+++ b/head/abstracts.tex
@@ -30,10 +30,19 @@ Lastly, a specialized neural network architecture is proposed to learn linear mo
 % French abstract
 \begin{otherlanguage}{french}
 \cleardoublepage
+
 \chapter*{Résumé}
 \markboth{Résumé}{Résumé}
-% put your text here
-\lipsum[1-2]
+
+Cette thèse se situe à la croisée de l'apprentissage automatique et de l'ingénierie des systèmes de contrôle. Nos contributions sont théoriques, en proposant une nouvelle méthodologie de quantification des incertitudes, ainsi que expérimentales, en étudiant l'adéquation de certaines techniques d'apprentissage automatique à intégrer des boucles de rétroaction dans le contexte de deux problèmes de contrôle réels et difficiles.
+
+La première partie du document est consacrée aux méthodes noyau déterministes. Tout d'abord, le formalisme est présenté ainsi que certaines techniques pour créer des modèles pour une fonction inconnue à partir d'échantillons. Ensuite, des hypothèses sont faites sur la complexité de la fonction inconnue et sur le bruit affectant les données, ce qui permet de développer une nouvelle théorie robuste de quantification d'incertitude (QI). Grâce à ce procédure de quantification de l'incertitude, des limites dures hors échantillon sur les valeurs de ... peuvent être calculées en résolvant des problèmes d'optimisation convexes. Des approximations extérieures sous forme fermée sont également présentées comme une alternative légère à la résolution des programmes mathématiques. Plusieurs exemples sont donnés pour illustrer comment la communauté du contrôle pourrait bénéficier de l'utilisation de cet outil.
+
+Dans la deuxième partie de la thèse, des modèles statistiques sous forme de processus Gaussiens (GPs) sont considérés. Ceux-ci sont utilisés pour réaliser une tâche de contrôle de la température du bâtiment d'un centre de chirurgie hospitalier pendant une utilisation régulière. Les aspects techniques du problème
+Les aspects techniques du problème sont détaillés, suivis de l'acquisition des données, de la procédure d'apprentissage du modèle et de la formulation de la commande prédictive développée. Les résultats expérimentaux sur une période ininterrompue de quatre jours sont présentés et discutés, montrant un gain de performance économique tout en assurant une régulation adéquate de la température.
+
+Enfin, une architecture de réseau neuronal spécialisée est proposée pour apprendre des contrôleurs prédictifs (CP) basés sur de modèles linéaires à partir de paires état-entrée. Le réseau comporte des programmes quadratiques para métriques (pQP) comme non linéarité implicite et est utilisé pour réduire l'empreinte de stockage et la charge de calcul en ligne des CP. Deux exemples dans le domaine de l'électronique de puissance sont donnés pour démontrer l'efficacité du schéma proposé. Le deuxième exemple consistait à améliorer la réponse au démarrage d'un convertisseur abaisseur réel, à déployer la loi de contrôle apprise sur un microcontrôleur de 80 MHz et à effectuer les calculs en moins de 30 microsecondes.
+
 \end{otherlanguage}
 
 
