--- a/head/acknowledgements.tex
+++ b/head/acknowledgements.tex
@@ -2,19 +2,16 @@
 \markboth{Acknowledgements}{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}
 
-To be written... 
 %Pausing for a moment to recognize others' contributions to your personal development makes you realize how life unfolds in intertwined, intricate ways.
-%
-%Writing this thesis and defending my PhD would not have been possible if it were not for professor Colin Jones. I am sincerely grateful for your having invited me to join LA back in 2018, for your having given me the opportunity to develop my work in such a bright research environment. Your always-positive and light-weight approach to work was much appreciated, along with your talent to constantly brig forth new ideas. Thank you for all, truly.
-%
-%Here's to all other professors and the defense committee...
-%
-%LA is a great place to do your PhD at. The group is diverse and amicable, people are intellectually bright, and the overall atmosphere is on point. I am indebted to Mr. Harsh Ambarishkumar Shukla for being an awesome friend, for all the long talks about every possible subject one could imagine, most often accompanied by one drink or two. Throughout this journey, Yingzhao Lian has been my PhD twin, always making provocative research remarks and sharing his wine and food expertise with remarkable excitement. Paul Scharnhorst's contributions were mainly in two forms: being a key collaborator with whom the main theoretical results covered herein were derived, and constituting the Bienne-Nêuchatel alliance that organized quite a number of dinners ending in Qwirkle matches. My time spent at the office would have not been as interesting without Mustafa Turan, for listening to my never-ending semi-philosophical blabbers and for being always ready to talk about the latest and greatest recipe. Cite Pulkit, Alessio, Sohail, Philippe, Clara, J1, J2, 
-%
-%The foremost group is certainly my fiancee and my family. I have an immense respect for my parents who have risen their children ensuring the absorption of important core values, including mutual respect, fairness and empathy.  To this day, I look up to you. \textit{Muito obrigado por tudo}, Bruno, Erica, Fabio and Renato. Since we met, 
-%
-%I am grateful for having met truly special people during my Bachelor studies who encouraged me to go beyond what seemed to be our limits at the time. In particular I wish to thank prof. Ruben Barros Godoy who played a fundamental role in my early academic years. 
 
+%Writing this thesis and defending my PhD would not have been possible if it were not for professor Colin Jones. I am sincerely grateful for having invited me to join LA back in 2018, for your having given me the opportunity to develop my work in such a bright research environment. Your always-positive and light-weight approach to work was much appreciated, along with your talent to constantly brig forth new ideas. Thank you for all, truly.
+First and foremost, I acknowledge professor Colin Jones' fundamental contribution to the present thesis, which was made in two, both equally important, but distinct ways. Directly, through countless motivating discussions on different topics that would go on for hours, and an always-positive attitude towards work and research that helped me along my journey. Indirectly, through creating a light atmosphere in our group, where cooperation is encouraged over competition. Taking a step back, I am also deeply grateful to you for having invited me to join the group and allowing me to develop my work at EPFL. 
+
+I would like to thank professors Sandra Hirche from Technische Universität München, professor Lorenzo Fagiano from Politecnico di Milano, professor Roy Smith from Eidgenössische Technische Hochschule Zürich, and professor Giancarlo Ferrari-Trecate from École polytechnique fédérale de Lausanne, for having accepted composing my doctoral exam jury and for dedicating their time to reading my work and providing me with feedback.
+
+The Laboratoire d'Automatique is a great place to do your PhD at. The group is diverse and amicable, people are intellectually bright, and the atmosphere is on point. Here is a list of people that helped me during the course of my doctorate: Alessio, Baiwei, Clara, Harsh, Johannes, Johannes, Mustafa, Paul, Peter, Philippe, Pulkit, Roland, Sohail, Yingzhao, Yuning. You have contributed to making both my academic and my personal life richer and more fun.
+
+The foremost group is certainly my wife and my family. I have an immense respect for my parents who have risen their children ensuring the absorption of important core values, including mutual respect, fairness and empathy. To this day, I look up to you. \textit{Muito obrigado por tudo}, Bruno, Erica, Fabio and Renato. Vivi has given me support, advice and love, aiding me in every single moment of the last years. Thank you, truly! 
 
 \bigskip
  
