--- a/tail/cv.tex
+++ b/tail/cv.tex
@@ -3,5 +3,5 @@
 \phantomsection
 \addcontentsline{toc}{chapter}{Curriculum Vitae}
 \ifpdf
-\includepdf[pagecommand=\thispagestyle{addpagenumbersforpdfimports},pages=-]{tail/cv.pdf}
+\includepdf[pagecommand=\thispagestyle{empty},pages=-]{tail/cv-fancy.pdf}
 \fi
